--- a/index.html
+++ b/index.html
@@ -1,253 +1,105 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Apresentação Responsiva</title>
-    <!-- Inclui o CDN do Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800&display=swap');
+  <meta charset="UTF-8">
+  <title>Cardápio TV</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: #111;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
 
-        body {
-            font-family: 'Poppins', sans-serif;
-            color: #333;
-        }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
 
-        .animar-entrada {
-            animation: fadeIn 1.5s ease-in-out;
-        }
-
-        .animar-fade-in-up {
-            animation: fadeInUp 1.5s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        #background-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
-        }
-
-        #background-container::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.7);
-        }
-
-        #background-image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .main-content {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            padding: 2rem;
-        }
-
-        @media (min-width: 768px) {
-            .main-content {
-                flex-direction: row;
-                padding: 4rem;
-            }
-        }
-
-        @media (max-width: 1010px) {
-            #nome-empresa {
-                font-size: 3.75rem;
-                /* text-6xl */
-            }
-
-            #subtitulo {
-                font-size: 1.5rem;
-                /* text-2xl */
-            }
-
-            #titulo-historia {
-                font-size: 2.25rem;
-                /* text-4xl */
-            }
-
-            #texto-historia {
-                font-size: 1.25rem;
-                /* text-xl */
-            }
-        }
-    </style>
+    .mensagem {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      z-index: 9999;
+      text-align: center;
+      cursor: pointer;
+      color: white;
+    }
+  </style>
 </head>
+<body>
 
-<body class="flex flex-col min-h-screen">
-    <div id="background-container">
-        <img id="background-image" src="" alt="Fundo da Loja">
-    </div>
+  <iframe id="frame" src="modelo1.html"></iframe>
 
-    <main class="main-content">
-        <!-- Lado esquerdo com a logo e texto -->
-        <div
-            class="md:w-1/2 p-8 md:p-16 bg-red-700 text-white rounded-3xl shadow-2xl flex flex-col justify-center items-center transform transition-transform duration-500 hover:scale-105 animar-entrada">
-            <div id="logo-container"
-                class="max-w-xs mb-8 rounded-3xl transform transition-transform duration-500 hover:rotate-6 flex items-center justify-center">
-                <img id="logo-image" src="" alt="Logo da Empresa" class="w-full h-auto">
-            </div>
-            <div class="text-center animar-fade-in-up">
-                <h1 id="nome-empresa" class="text-6xl md:text-8xl font-extrabold mb-4 drop-shadow-lg"></h1>
-                <p id="subtitulo" class="text-xl md:text-3xl font-semibold opacity-80"></p>
-            </div>
-        </div>
+  <div id="mensagem" class="mensagem">
+    Clique em qualquer lugar para ativar a tela cheia 📺
+  </div>
 
-        <!-- Lado direito com imagem de fundo e conteúdo -->
-        <div class="md:w-1/2 p-8 md:p-16 flex flex-col justify-center items-center">
-            <div class="text-center">
-                <h2 id="titulo-historia" class="text-5xl font-extrabold text-red-700 mb-4 animar-fade-in-up"></h2>
-                <p id="texto-historia" class="text-2xl text-gray-700 leading-relaxed animar-fade-in-up">
-                </p>
-            </div>
-        </div>
+  <script>
+    const paginas = [
+        "modelo1.html",
+        "modelo2.html",
+        "modelo3.html",
+        "modelo4.html",
+        "modelo5.html",
+        "modelo6.html",
+        "modelo7.html",
+        "modelo8.html",
+        "modelo9.html",
+        "modelo10.html",
+        "modelo11.html",
+        "modelo12.html",
+        "modelo13.html"
+    ];
 
-    </main>
+    let indice = 0;
+    let intervalo = null;
+    const tempoTroca = 5000; // 5 segundos
+    const frame = document.getElementById("frame");
+    const mensagem = document.getElementById("mensagem");
 
-    <script>
-        // Objeto com os dados da loja que você pode editar
-        const dadosLoja = {
-            nomeEmpresa: "Nome da Sua Empresa",
-            subtitulo: "Seu Slogan ou Dados da Empresa",
-            logoImagemUrl: "Logo_Exemplo.png",
-            historiaTitulo: "Nossa História",
-            historiaTexto: "Bem-vindo! Estamos no mercado há muitos anos, dedicados a oferecer os melhores produtos e a melhor experiência para você. Nossa paixão é inovar e garantir a satisfação de cada cliente.",
-            imagemFundoUrl: "fundo1.avif"
-        };
+    function iniciarSlides() {
+      if (intervalo) clearInterval(intervalo);
+      intervalo = setInterval(() => {
+        indice = (indice + 1) % paginas.length;
+        frame.src = paginas[indice]; // Troca só o conteúdo dentro do iframe
+      }, tempoTroca);
+    }
 
-        // Função para carregar os dados na página
-        function carregarDados() {
-            document.title = "Cardapio | " + dadosLoja.nomeEmpresa;
-            document.getElementById('nome-empresa').textContent = dadosLoja.nomeEmpresa;
-            document.getElementById('subtitulo').textContent = dadosLoja.subtitulo;
-            document.getElementById('logo-image').src = dadosLoja.logoImagemUrl;
-            document.getElementById('titulo-historia').textContent = dadosLoja.historiaTitulo;
-            document.getElementById('texto-historia').textContent = dadosLoja.historiaTexto;
-            document.getElementById('background-image').src = dadosLoja.imagemFundoUrl;
-        }
+    function pararSlides() {
+      clearInterval(intervalo);
+      intervalo = null;
+    }
 
-        // Chama a função quando a página é carregada
-        window.onload = carregarDados;
-    </script>
+    // Detecta saída/entrada do modo tela cheia
+    document.addEventListener("fullscreenchange", () => {
+      if (!document.fullscreenElement) {
+        pararSlides();
+        mensagem.style.display = "flex";
+      } else {
+        mensagem.style.display = "none";
+        iniciarSlides();
+      }
+    });
 
+    // Ativar fullscreen ao clicar na mensagem
+    mensagem.addEventListener("click", () => {
+      if (document.documentElement.requestFullscreen) {
+        document.documentElement.requestFullscreen();
+      }
+    });
+  </script>
 
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
-
-        <style>
-            .extra{
-                position: absolute;
-                bottom: 20px;
-                right: 10px;
-
-            }
-
-            .extra:hover {
-                color: #750c0c;
-                text-decoration: underline;
-                cursor: pointer;
-                transition: 0.5s;
-            }
-
-            .extra:hover .catextra {
-                pointer-events: all;
-                transition: 0.6s;
-                opacity: 1;
-
-            }
-
-            .catextra {
-                bottom: 100%;
-                left: -30px;
-                position: absolute;
-                background-color: #eeeeee;
-                display: flex;
-                justify-content: space-between;
-                flex-direction: column;
-                width: 100px;
-                opacity: 0;
-                transition: 0.8s;
-                pointer-events: none;
-                padding: 0%;
-                z-index: 99999999;
-            }
-
-            .catextra a {
-                color: #292929;
-                font-weight: 400;
-                font-size: 13.5px;
-                text-transform: uppercase;
-                text-decoration: none;
-            }
-
-            .catextra li:hover {
-                background-color: #750c0c;
-                border: #750c0c;
-                transition: 0.5s;
-            }
-
-            .catextra li:hover a {
-                color: #eeeeee;
-            }
-
-            .catextra li {
-                list-style-type: none;
-                padding: 5px;
-                border: 1px solid #eeeeee;
-                transition: 0.5s;
-            }
-        </style>
 </body>
-
 </html>
