--- a/modelo11.html
+++ b/modelo11.html
@@ -173,7 +173,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Loja de Bolos',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             produtoUnico: {
                 nome: 'Bolo de Aniversário',
                 preco: 80.00
