--- a/modelo13.html
+++ b/modelo13.html
@@ -176,7 +176,7 @@
         // Objeto de configuração para personalização
         const configuracoes = {
             nomeEmpresa: "Açougue do Zé",
-            logoUrl: 'Logo_Exemplo.png', // URL da sua logo
+            logoUrl: 'logoexemplo.png', // URL da sua logo
             titulo: "Cortes Nobres",
             legenda: "Qualidade e frescor para a sua mesa!",
         };
