--- a/modelo2.html
+++ b/modelo2.html
@@ -155,7 +155,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Padaria da Esquina',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             categorias: [
                 {
                     nome: 'Salgados',
