--- a/modelo3.html
+++ b/modelo3.html
@@ -267,7 +267,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Cafeteria & Lanches',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             categorias: [
                 {
                     nome: 'Bebidas Quentes',
