--- a/modelo4.html
+++ b/modelo4.html
@@ -224,7 +224,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Padaria Artesanal',
-            logoUrl: 'Logo_exemplo.png',
+            logoUrl: 'logoexemplo.png',
             categorias: [
                 {
                     nome: 'Pães',
