--- a/modelo6.html
+++ b/modelo6.html
@@ -161,7 +161,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Restaurante Sabor & Arte',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             fotoDestaqueUrl: 'pratos.png',
             categorias: [
                 {
