--- a/modelo7.html
+++ b/modelo7.html
@@ -149,7 +149,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Lanchonete Sabor',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             backgroundUrl: 'fundo2.jpg',
             categorias: [
                 {
