--- a/modelo8.html
+++ b/modelo8.html
@@ -159,7 +159,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Cafeteria Aconchego',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             ofertaDoDia: {
                 nome: 'Cappuccino Gelado',
                 preco: 15.00,
