--- a/modelo9.html
+++ b/modelo9.html
@@ -158,7 +158,7 @@
         // Dados da página que serão carregados via JavaScript
         const dadosPagina = {
             nomeEmpresa: 'Cafeteria Aconchego',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             backgroundUrl: 'fundo2.jpg',
             categoria: {
                 nome: 'Bebidas Quentes',
