--- a/modelo12.html
+++ b/modelo12.html
@@ -172,7 +172,7 @@
         // Objeto de configuração para personalização
         const configuracoes = {
             nomeEmpresa: "Mercado Central",
-            logoUrl: 'Logo_Exemplo.png', // URL da sua logo
+            logoUrl: 'logoexemplo.png', // URL da sua logo
             titulo: "Nosso Hortifruti",
             legenda: "Produtos frescos e de qualidade para sua família",
         };
