--- a/modelo5.html
+++ b/modelo5.html
@@ -240,7 +240,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Doces da Vovó',
-            logoUrl: 'Logo_Exemplo.png',
+            logoUrl: 'logoexemplo.png',
             backgroundUrl: 'fundo3.jpg',
             categoria: {
                 nome: 'Sobremesas',
