--- a/modelo4.html
+++ b/modelo4.html
@@ -5,27 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Digital - Layout 6</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+<script src="https://cdn.tailwindcss.com"></script>
 
         <style>
             .extra{
@@ -228,10 +208,10 @@
             categorias: [
                 {
                     nome: 'Pães',
-                    imagem: 'Paes.webp',
+                    imagem: 'paes.webp',
                     itens: [
-                        { nome: 'Pão de Centeio', descricao: 'Fatia grossa, ideal para torradas.', preco: 10.00, imageUrl: 'Pao_fofo.webp' },
-                        { nome: 'Pão de Castanha-do-Pará', descricao: 'Feito com farinha integral.', preco: 12.00, imageUrl: 'Pao_fresco.webp' },
+                        { nome: 'Pão de Centeio', descricao: 'Fatia grossa, ideal para torradas.', preco: 10.00, imageUrl: 'paofofo.webp' },
+                        { nome: 'Pão de Castanha-do-Pará', descricao: 'Feito com farinha integral.', preco: 12.00, imageUrl: 'paofresco.webp' },
                     ]
                 },
                 {
@@ -294,24 +274,7 @@
     </script>
 
 
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+            
 
         <style>
             .extra{
