--- a/index.html
+++ b/index.html
@@ -1,105 +1,138 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Cardápio TV</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      background: #111;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-    }
+    <meta charset="UTF-8">
+    <title>Cardápio TV</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            background: #111;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+        }
 
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
 
-    .mensagem {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.85);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      z-index: 9999;
-      text-align: center;
-      cursor: pointer;
-      color: white;
-    }
-  </style>
+        .mensagem {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.85);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+            z-index: 9999;
+            text-align: center;
+            cursor: pointer;
+            color: white;
+        }
+
+        #exitFullscreenBtn {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background-color: rgba(255, 255, 255, 0.2);
+            color: white;
+            background-color: #111;
+            border: 2px solid white;
+            opacity: 50%;
+            border-radius: 50%;
+            padding: 8px 10px;
+            align-items: center;
+            font-size: 1.2rem;
+            line-height: 1;
+            text-align: center;
+            cursor: pointer;
+            z-index: 10000;
+            display: none; /* Inicia oculto */
+        }
+    </style>
 </head>
 <body>
 
-  <iframe id="frame" src="modelo1.html"></iframe>
+    <iframe id="frame" src="modelo1.html"></iframe>
 
-  <div id="mensagem" class="mensagem">
-    Clique em qualquer lugar para ativar a tela cheia 📺
-  </div>
+    <div id="mensagem" class="mensagem">
+        Clique em qualquer lugar para ativar a tela cheia 📺
+    </div>
 
-  <script>
-    const paginas = [
-        "modelo1.html",
-        "modelo2.html",
-        "modelo3.html",
-        "modelo4.html",
-        "modelo5.html",
-        "modelo6.html",
-        "modelo7.html",
-        "modelo8.html",
-        "modelo9.html",
-        "modelo10.html",
-        "modelo11.html",
-        "modelo12.html",
-        "modelo13.html"
-    ];
+    <!-- Botão para sair da tela cheia -->
+    <button id="exitFullscreenBtn">✕</button>
 
-    let indice = 0;
-    let intervalo = null;
-    const tempoTroca = 5000; // 5 segundos
-    const frame = document.getElementById("frame");
-    const mensagem = document.getElementById("mensagem");
+    <script>
+        const paginas = [
+            "modelo1.html",
+            "modelo2.html",
+            "modelo3.html",
+            "modelo4.html",
+            "modelo5.html",
+            "modelo6.html",
+            "modelo7.html",
+            "modelo8.html",
+            "modelo9.html",
+            "modelo10.html",
+            "modelo11.html",
+            "modelo12.html",
+            "modelo13.html"
+        ];
 
-    function iniciarSlides() {
-      if (intervalo) clearInterval(intervalo);
-      intervalo = setInterval(() => {
-        indice = (indice + 1) % paginas.length;
-        frame.src = paginas[indice]; // Troca só o conteúdo dentro do iframe
-      }, tempoTroca);
-    }
+        let indice = 0;
+        let intervalo = null;
+        const tempoTroca = 5000; // 5 segundos
+        const frame = document.getElementById("frame");
+        const mensagem = document.getElementById("mensagem");
+        const exitFullscreenBtn = document.getElementById("exitFullscreenBtn");
 
-    function pararSlides() {
-      clearInterval(intervalo);
-      intervalo = null;
-    }
+        function iniciarSlides() {
+            if (intervalo) clearInterval(intervalo);
+            intervalo = setInterval(() => {
+                indice = (indice + 1) % paginas.length;
+                frame.src = paginas[indice]; // Troca só o conteúdo dentro do iframe
+            }, tempoTroca);
+        }
 
-    // Detecta saída/entrada do modo tela cheia
-    document.addEventListener("fullscreenchange", () => {
-      if (!document.fullscreenElement) {
-        pararSlides();
-        mensagem.style.display = "flex";
-      } else {
-        mensagem.style.display = "none";
-        iniciarSlides();
-      }
-    });
+        function pararSlides() {
+            clearInterval(intervalo);
+            intervalo = null;
+        }
 
-    // Ativar fullscreen ao clicar na mensagem
-    mensagem.addEventListener("click", () => {
-      if (document.documentElement.requestFullscreen) {
-        document.documentElement.requestFullscreen();
-      }
-    });
-  </script>
+        // Detecta saída/entrada do modo tela cheia
+        document.addEventListener("fullscreenchange", () => {
+            if (!document.fullscreenElement) {
+                pararSlides();
+                mensagem.style.display = "flex";
+                exitFullscreenBtn.style.display = "none"; // Oculta o botão
+            } else {
+                mensagem.style.display = "none";
+                exitFullscreenBtn.style.display = "block"; // Mostra o botão
+                iniciarSlides();
+            }
+        });
+
+        // Ativar fullscreen ao clicar na mensagem
+        mensagem.addEventListener("click", () => {
+            if (document.documentElement.requestFullscreen) {
+                document.documentElement.requestFullscreen();
+            }
+        });
+
+        // Evento de clique para o novo botão de saída
+        exitFullscreenBtn.addEventListener("click", () => {
+            if (document.exitFullscreen) {
+                document.exitFullscreen();
+            }
+        });
+    </script>
 
 </body>
 </html>
