--- a/modelo2.html
+++ b/modelo2.html
@@ -4,27 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Digital - Layout 8</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+<script src="https://cdn.tailwindcss.com"></script>
 
         <style>
             .extra{
@@ -159,19 +139,19 @@
             categorias: [
                 {
                     nome: 'Salgados',
-                    imagem: 'Salgados.jpg',
+                    imagem: 'salgados.jpg',
                     itens: [
-                        { nome: 'Coxinha de Frango', descricao: 'Nossa campeã de vendas!', preco: 7.50, imageUrl: 'Coxinha.webp' },
-                        { nome: 'Quiche de Alho Poró', descricao: 'Feita com massa crocante.', preco: 9.00, imageUrl: 'Alho.avif' },
-                        { nome: 'Empadão de Frango', descricao: 'Fatias generosas e suculentas.', preco: 12.00, imageUrl: 'Empada.jpg' },
+                        { nome: 'Coxinha de Frango', descricao: 'Nossa campeã de vendas!', preco: 7.50, imageUrl: 'coxinha.webp' },
+                        { nome: 'Quiche de Alho Poró', descricao: 'Feita com massa crocante.', preco: 9.00, imageUrl: 'alho.avif' },
+                        { nome: 'Empadão de Frango', descricao: 'Fatias generosas e suculentas.', preco: 12.00, imageUrl: 'empada.jpg' },
                     ]
                 },
                 {
                     nome: 'Bebidas',
-                    imagem: 'Bebidas_Geral.jpg',
+                    imagem: 'bebidasgeral.jpg',
                     itens: [
                         { nome: 'Café Coado', descricao: 'O clássico para um bom dia.', preco: 5.00, imageUrl: 'cafe.jpg' },
-                        { nome: 'Suco de Laranja', descricao: '100% natural, espremido na hora.', preco: 8.50, imageUrl: 'Suco.webp' },
+                        { nome: 'Suco de Laranja', descricao: '100% natural, espremido na hora.', preco: 8.50, imageUrl: 'suco.webp' },
                     ]
                 },
             ]
@@ -230,24 +210,7 @@
     </script>
 
 
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+            
 
         <style>
             .extra{
