--- a/modelo3.html
+++ b/modelo3.html
@@ -4,27 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Digital - Layout 7</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+<script src="https://cdn.tailwindcss.com"></script>
 
         <style>
             .extra{
@@ -271,7 +251,7 @@
             categorias: [
                 {
                     nome: 'Bebidas Quentes',
-                    imagem: 'Bebidas_Geral.jpg',
+                    imagem: 'bebidasgeral.jpg',
                     itens: [
                         { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, imagem: 'cafe.jpg' },
                         { nome: 'Cappuccino', descricao: 'Com canela e chocolate.', preco: 12.00, imagem: 'capu.avif' },
@@ -280,10 +260,10 @@
                 },
                 {
                     nome: 'Salgados',
-                    imagem: 'Salgados.jpg',
+                    imagem: 'salgados.jpg',
                     itens: [
                         { nome: 'Coxinha de Frango', descricao: 'A favorita de todos.', preco: 7.50, imagem: 'coxinha.webp' },
-                        { nome: 'Pão de Queijo Recheado', descricao: 'Com requeijão ou catupiry.', preco: 9.00, imagem: 'pao_queijo.jpeg' },
+                        { nome: 'Pão de Queijo Recheado', descricao: 'Com requeijão ou catupiry.', preco: 9.00, imagem: 'paoqueijo.jpeg' },
                         { nome: 'Empadinha de Palmito', descricao: 'Massa fina e recheio cremoso.', preco: 8.00, imagem: 'empada.jpg' },
                     ]
                 }
@@ -354,24 +334,7 @@
     </script>
 
 
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+            
 
         <style>
             .extra{
