--- a/modelo8.html
+++ b/modelo8.html
@@ -4,27 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Digital - Layout 2</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+<script src="https://cdn.tailwindcss.com"></script>
 
         <style>
             .extra{
@@ -168,7 +148,7 @@
             categoria: {
                 nome: 'Bebidas Quentes',
                 // Adicionada a URL da imagem da categoria
-                imagemUrl: 'bebidas_geral.jpg',
+                imagemUrl: 'bebidasgeral.jpg',
                 itens: [
                     // A foto de cada item está aqui
                     { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: 'cafe.jpg' },
@@ -228,24 +208,7 @@
     </script>
 
 
-            <div class="extra">
-            Opções
-            <ul class="catextra">
-                <li><a href="index.html">Pag 1</a></li>
-                <li><a href="modelo2.html">Pag 2</a></li>
-                <li><a href="modelo3.html">Pag 3</a></li>
-                <li><a href="modelo4.html">Pag 4</a></li>
-                <li><a href="modelo5.html">Pag 5</a></li>
-                <li><a href="modelo6.html">Pag 6</a></li>
-                <li><a href="modelo7.html">Pag 7</a></li>
-                <li><a href="modelo8.html">Pag 8</a></li>
-                <li><a href="modelo9.html">Pag 9</a></li>
-                <li><a href="modelo10.html">Pag 10</a></li>
-                <li><a href="modelo11.html">Pag 11</a></li>
-                <li><a href="modelo12.html">Pag 12</a></li>
-                <li><a href="modelo13.html">Pag 13</a></li>
-            </ul>
-        </div>
+            
 
         <style>
             .extra{
