--- a/modelo1.html
+++ b/modelo1.html
@@ -144,7 +144,7 @@
         const dadosLoja = {
             nomeEmpresa: "Nome da Sua Empresa",
             subtitulo: "Seu Slogan ou Dados da Empresa",
-            logoImagemUrl: "logoexemplo.png",
+            logoImagemUrl: ("logoexemplo.png"),
             historiaTitulo: "Nossa História",
             historiaTexto: "Bem-vindo! Estamos no mercado há muitos anos, dedicados a oferecer os melhores produtos e a melhor experiência para você. Nossa paixão é inovar e garantir a satisfação de cada cliente.",
             imagemFundoUrl: "fundo1.avif"
