--- a/modelo1.html
+++ b/modelo1.html
@@ -144,10 +144,10 @@
         const dadosLoja = {
             nomeEmpresa: "Nome da Sua Empresa",
             subtitulo: "Seu Slogan ou Dados da Empresa",
-            logoImagemUrl: ("logoexemplo.png"),
+            logoImagemUrl: "img/logoexemplo.png",
             historiaTitulo: "Nossa História",
             historiaTexto: "Bem-vindo! Estamos no mercado há muitos anos, dedicados a oferecer os melhores produtos e a melhor experiência para você. Nossa paixão é inovar e garantir a satisfação de cada cliente.",
-            imagemFundoUrl: "fundo1.avif"
+            imagemFundoUrl: "img/fundo1.avif"
         };
 
         // Função para carregar os dados na página
