--- a/modelo10.html
+++ b/modelo10.html
@@ -178,7 +178,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Loja de Bolos',
-            logoUrl: 'logoexemplo.png',
+            logoUrl: 'img/logoexemplo.png',
             produtoUnico: {
                 nome: 'Bolo de Aniversário',
                 preco: 80.00
