--- a/modelo12.html
+++ b/modelo12.html
@@ -145,8 +145,8 @@
         // Dados do cardápio
         const dadosLoja = {
             nomeEmpresa: 'Nome da Sua Loja',
-            logoUrl: 'logoexemplo.png',
-            fundoUrl: 'bolo_chocolate.jpg',
+            logoUrl: 'img/logoexemplo.png',
+            fundoUrl: 'img/bolo_chocolate.jpg',
             produtoUnico: {
                 nome: 'Bolo de Aniversário',
                 preco: 80.00,
