--- a/modelo13.html
+++ b/modelo13.html
@@ -152,7 +152,7 @@
         // Objeto de configuração para personalização
         const configuracoes = {
             nomeEmpresa: "Mercado Central",
-            logoUrl: 'logoexemplo.png', // URL da sua logo
+            logoUrl: 'img/logoexemplo.png', // URL da sua logo
             titulo: "Nosso Hortifruti",
             legenda: "Produtos frescos e de qualidade para sua família",
         };
