--- a/modelo14.html
+++ b/modelo14.html
@@ -156,7 +156,7 @@
         // Objeto de configuração para personalização
         const configuracoes = {
             nomeEmpresa: "Açougue do Zé",
-            logoUrl: 'logoexemplo.png', // URL da sua logo
+            logoUrl: 'img/logoexemplo.png', // URL da sua logo
             titulo: "Cortes Nobres",
             legenda: "Qualidade e frescor para a sua mesa!",
         };
