--- a/modelo3.html
+++ b/modelo3.html
@@ -247,7 +247,7 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Cafeteria & Lanches',
-            logoUrl: 'logoexemplo.png',
+            logoUrl: 'img/logoexemplo.png',
             categorias: [
                 {
                     nome: 'Bebidas Quentes',
