--- a/modelo5.html
+++ b/modelo5.html
@@ -220,14 +220,14 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Doces da Vovó',
-            logoUrl: 'logoexemplo.png',
-            backgroundUrl: 'fundo3.jpg',
+            logoUrl: 'img/logoexemplo.png',
+            backgroundUrl: 'img/fundo3.jpg',
             categoria: {
                 nome: 'Sobremesas',
                 itens: [
-                    { nome: 'Bolo de Chocolate', descricao: 'Delicioso e macio.', preco: 15.00, fotoUrl: 'bolo_chocolate.jpg' },
-                    { nome: 'Pudim de Leite', descricao: 'A sobremesa clássica.', preco: 12.00, fotoUrl: 'pudim.jpg' },
-                    { nome: 'Torta de Morango', descricao: 'Fresca e cheia de sabor.', preco: 18.00, fotoUrl: 'torta.jpg' },
+                    { nome: 'Bolo de Chocolate', descricao: 'Delicioso e macio.', preco: 15.00, fotoUrl: 'img/bolo_chocolate.jpg' },
+                    { nome: 'Pudim de Leite', descricao: 'A sobremesa clássica.', preco: 12.00, fotoUrl: 'img/pudim.jpg' },
+                    { nome: 'Torta de Morango', descricao: 'Fresca e cheia de sabor.', preco: 18.00, fotoUrl: 'img/torta.jpg' },
                 ]
             }
         };
