--- a/modelo6.html
+++ b/modelo6.html
@@ -141,8 +141,8 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Restaurante Sabor & Arte',
-            logoUrl: 'logoexemplo.png',
-            fotoDestaqueUrl: 'pratos.png',
+            logoUrl: 'img/logoexemplo.png',
+            fotoDestaqueUrl: 'img/pratos.png',
             categorias: [
                 {
                     nome: 'Pratos Principais',
@@ -151,16 +151,16 @@
                         {
                             nome: 'Massas',
                             itens: [
-                                { nome: 'Lasanha à Bolonhesa', descricao: 'Tradicional, com molho artesanal.', preco: 35.00, imagemUrl: 'lasanha.png' },
-                                { nome: 'Fetuccine ao Pesto', descricao: 'Massa fresca com pesto de manjericão.', preco: 32.00, imagemUrl: 'fetuchine.jpg' },
+                                { nome: 'Lasanha à Bolonhesa', descricao: 'Tradicional, com molho artesanal.', preco: 35.00, imagemUrl: 'img/lasanha.png' },
+                                { nome: 'Fetuccine ao Pesto', descricao: 'Massa fresca com pesto de manjericão.', preco: 32.00, imagemUrl: 'img/fetuchine.jpg' },
                             ]
                         },
                         {
                             nome: 'Carnes',
                             itens: [
-                                { nome: 'Picanha na Chapa', descricao: 'Acompanha arroz, farofa e vinagrete.', preco: 60.00, imagemUrl: 'picanha.jpg' },
-                                { nome: 'Filé de Frango Grelhado', descricao: 'Servido com legumes cozidos.', preco: 28.00, imagemUrl: 'file.jpeg' },
-                                { nome: 'Salmão ao Molho de Maracujá', descricao: 'Delicioso e leve.', preco: 55.00, imagemUrl: 'salmao.jpg' },
+                                { nome: 'Picanha na Chapa', descricao: 'Acompanha arroz, farofa e vinagrete.', preco: 60.00, imagemUrl: 'img/picanha.jpg' },
+                                { nome: 'Filé de Frango Grelhado', descricao: 'Servido com legumes cozidos.', preco: 28.00, imagemUrl: 'img/file.jpeg' },
+                                { nome: 'Salmão ao Molho de Maracujá', descricao: 'Delicioso e leve.', preco: 55.00, imagemUrl: 'img/salmao.jpg' },
                             ]
                         }
                     ]
