--- a/modelo7.html
+++ b/modelo7.html
@@ -129,37 +129,37 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Lanchonete Sabor',
-            logoUrl: 'logoexemplo.png',
-            backgroundUrl: 'fundo2.jpg',
+            logoUrl: 'img/logoexemplo.png',
+            backgroundUrl: 'img/fundo2.jpg',
             categorias: [
                 {
                     nome: 'Lanches',
-                    imageUrl: 'hamburguer.jpg',
+                    imageUrl: 'img/hamburguer.jpg',
                     itens: [
-                        { nome: 'X-Burguer', descricao: 'Pão, carne, queijo e salada.', preco: 20.00, fotoUrl: 'hamburguer.jpg' },
-                        { nome: 'X-Salada', descricao: 'Pão, carne, queijo, alface e tomate.', preco: 22.00, fotoUrl: 'hamburguer.jpg' },
-                        { nome: 'X-Bacon', descricao: 'Pão, carne, queijo e bacon.', preco: 25.00, fotoUrl: 'hamburguer.jpg' },
-                        { nome: 'X-Tudo', descricao: 'Completo, com tudo o que você tem direito.', preco: 30.00, fotoUrl: 'hamburguer.jpg' },
+                        { nome: 'X-Burguer', descricao: 'Pão, carne, queijo e salada.', preco: 20.00, fotoUrl: 'img/hamburguer.jpg' },
+                        { nome: 'X-Salada', descricao: 'Pão, carne, queijo, alface e tomate.', preco: 22.00, fotoUrl: 'img/hamburguer.jpg' },
+                        { nome: 'X-Bacon', descricao: 'Pão, carne, queijo e bacon.', preco: 25.00, fotoUrl: 'img/hamburguer.jpg' },
+                        { nome: 'X-Tudo', descricao: 'Completo, com tudo o que você tem direito.', preco: 30.00, fotoUrl: 'img/hamburguer.jpg' },
                     ]
                 },
                 {
                     nome: 'Bebidas',
-                    imageUrl: 'bebidasgeral.jpg',
+                    imageUrl: 'img/bebidasgeral.jpg',
                     itens: [
-                        { nome: 'Refrigerante Lata', descricao: 'Coca-cola, guaraná, etc.', preco: 6.00, fotoUrl: 'refri.jpg' },
-                        { nome: 'Suco Natural', descricao: 'Laranja, abacaxi ou morango.', preco: 8.00, fotoUrl: 'suco.webp' },
-                        { nome: 'Água Mineral', descricao: 'Com ou sem gás.', preco: 4.00, fotoUrl: 'agua.jpeg' },
-                        { nome: 'Cerveja Long Neck', descricao: 'Brahma, Skol, Heineken.', preco: 10.00, fotoUrl: 'cerveja.jpg' },
+                        { nome: 'Refrigerante Lata', descricao: 'Coca-cola, guaraná, etc.', preco: 6.00, fotoUrl: 'img/refri.jpg' },
+                        { nome: 'Suco Natural', descricao: 'Laranja, abacaxi ou morango.', preco: 8.00, fotoUrl: 'img/suco.webp' },
+                        { nome: 'Água Mineral', descricao: 'Com ou sem gás.', preco: 4.00, fotoUrl: 'img/agua.jpeg' },
+                        { nome: 'Cerveja Long Neck', descricao: 'Brahma, Skol, Heineken.', preco: 10.00, fotoUrl: 'img/cerveja.jpg' },
                     ]
                 },
                 {
                     nome: 'Porções',
-                    imageUrl: 'salgados.jpg',
+                    imageUrl: 'img/salgados.jpg',
                     itens: [
-                        { nome: 'Batata Frita', descricao: 'Porção grande com queijo e bacon.', preco: 25.00, fotoUrl: 'fritas.jpeg' },
-                        { nome: 'Aipim Frito', descricao: 'Porção com molho especial.', preco: 22.00, fotoUrl: 'aipim.avif' },
-                        { nome: 'Onion Rings', descricao: 'Anéis de cebola crocantes.', preco: 20.00, fotoUrl: 'cebola.jpg' },
-                        { nome: 'Frango a Passarinho', descricao: 'Delicioso frango frito.', preco: 35.00, fotoUrl: 'file.jpeg' },
+                        { nome: 'Batata Frita', descricao: 'Porção grande com queijo e bacon.', preco: 25.00, fotoUrl: 'img/fritas.jpeg' },
+                        { nome: 'Aipim Frito', descricao: 'Porção com molho especial.', preco: 22.00, fotoUrl: 'img/aipim.avif' },
+                        { nome: 'Onion Rings', descricao: 'Anéis de cebola crocantes.', preco: 20.00, fotoUrl: 'img/cebola.jpg' },
+                        { nome: 'Frango a Passarinho', descricao: 'Delicioso frango frito.', preco: 35.00, fotoUrl: 'img/file.jpeg' },
                     ]
                 }
             ]
