--- a/modelo9.html
+++ b/modelo9.html
@@ -138,22 +138,22 @@
         // Dados da página que serão carregados via JavaScript
         const dadosPagina = {
             nomeEmpresa: 'Cafeteria Aconchego',
-            logoUrl: 'img/logoexemplo.png',
-            backgroundUrl: 'fundo2.jpg',
+            logoUrl: 'img/img/logoexemplo.png',
+            backgroundUrl: 'img/fundo2.jpg',
             categoria: {
                 nome: 'Bebidas Quentes',
-                imagemUrl: 'bebidasgeral.jpg',
+                imagemUrl: 'img/bebidasgeral.jpg',
                 itens: [
-                    { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: 'cafe.jpg' },
-                    { nome: 'Latte', descricao: 'Café com leite vaporizado.', preco: 10.00, fotoUrl: 'cafe2.jpeg' },
-                    { nome: 'Mocha', descricao: 'Café com chocolate e leite.', preco: 12.00, fotoUrl: 'cafe3.jpg' },
-                    { nome: 'Chá Mate', descricao: 'Chá gelado com limão.', preco: 8.00, fotoUrl: 'cha.jpg' },
-                    { nome: 'Chocolate Quente', descricao: 'Feito com cacau 100%.', preco: 11.00, fotoUrl: 'choco.jpeg' },
-                    { nome: 'Cappuccino', descricao: 'Café, leite vaporizado e espuma.', preco: 14.00, fotoUrl: 'capu.avif' },
-                    { nome: 'Cerveja Artesanal', descricao: 'A cerveja da casa, uma delícia.', preco: 22.00, fotoUrl: 'paes.webp' },
-                    { nome: 'Refrigerante', descricao: 'Uma variedade de sabores.', preco: 7.00, fotoUrl: 'refri.jpg' },
-                    { nome: 'Suco Natural', descricao: 'Suco de fruta fresca do dia.', preco: 9.00, fotoUrl: 'suco.webp' },
-                    { nome: 'Água com Gás', descricao: 'Refrescante e pura.', preco: 5.00, fotoUrl: 'agua.jpeg' },
+                    { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: 'img/cafe.jpg' },
+                    { nome: 'Latte', descricao: 'Café com leite vaporizado.', preco: 10.00, fotoUrl: 'img/cafe2.jpeg' },
+                    { nome: 'Mocha', descricao: 'Café com chocolate e leite.', preco: 12.00, fotoUrl: 'img/cafe3.jpg' },
+                    { nome: 'Chá Mate', descricao: 'Chá gelado com limão.', preco: 8.00, fotoUrl: 'img/cha.jpg' },
+                    { nome: 'Chocolate Quente', descricao: 'Feito com cacau 100%.', preco: 11.00, fotoUrl: 'img/choco.jpeg' },
+                    { nome: 'Cappuccino', descricao: 'Café, leite vaporizado e espuma.', preco: 14.00, fotoUrl: 'img/capu.avif' },
+                    { nome: 'Cerveja Artesanal', descricao: 'A cerveja da casa, uma delícia.', preco: 22.00, fotoUrl: 'img/paes.webp' },
+                    { nome: 'Refrigerante', descricao: 'Uma variedade de sabores.', preco: 7.00, fotoUrl: 'img/refri.jpg' },
+                    { nome: 'Suco Natural', descricao: 'Suco de fruta fresca do dia.', preco: 9.00, fotoUrl: 'img/suco.webp' },
+                    { nome: 'Água com Gás', descricao: 'Refrescante e pura.', preco: 5.00, fotoUrl: 'img/agua.jpeg' },
                 ]
             }
         };
