--- a/modelo2.html
+++ b/modelo2.html
@@ -135,23 +135,23 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Padaria da Esquina',
-            logoUrl: 'logoexemplo.png',
+            logoUrl: 'img/img/logoexemplo.png',
             categorias: [
                 {
                     nome: 'Salgados',
                     imagem: 'salgados.jpg',
                     itens: [
-                        { nome: 'Coxinha de Frango', descricao: 'Nossa campeã de vendas!', preco: 7.50, imageUrl: 'coxinha.webp' },
-                        { nome: 'Quiche de Alho Poró', descricao: 'Feita com massa crocante.', preco: 9.00, imageUrl: 'alho.avif' },
-                        { nome: 'Empadão de Frango', descricao: 'Fatias generosas e suculentas.', preco: 12.00, imageUrl: 'empada.jpg' },
+                        { nome: 'Coxinha de Frango', descricao: 'Nossa campeã de vendas!', preco: 7.50, imageUrl: 'img/coxinha.webp' },
+                        { nome: 'Quiche de Alho Poró', descricao: 'Feita com massa crocante.', preco: 9.00, imageUrl: 'img/alho.avif' },
+                        { nome: 'Empadão de Frango', descricao: 'Fatias generosas e suculentas.', preco: 12.00, imageUrl: 'img/empada.jpg' },
                     ]
                 },
                 {
                     nome: 'Bebidas',
                     imagem: 'bebidasgeral.jpg',
                     itens: [
-                        { nome: 'Café Coado', descricao: 'O clássico para um bom dia.', preco: 5.00, imageUrl: 'cafe.jpg' },
-                        { nome: 'Suco de Laranja', descricao: '100% natural, espremido na hora.', preco: 8.50, imageUrl: 'suco.webp' },
+                        { nome: 'Café Coado', descricao: 'O clássico para um bom dia.', preco: 5.00, imageUrl: 'img/cafe.jpg' },
+                        { nome: 'Suco de Laranja', descricao: '100% natural, espremido na hora.', preco: 8.50, imageUrl: 'img/suco.webp' },
                     ]
                 },
             ]
