--- a/modelo4.html
+++ b/modelo4.html
@@ -204,23 +204,23 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Padaria Artesanal',
-            logoUrl: 'logoexemplo.png',
+            logoUrl: 'img/logoexemplo.png',
             categorias: [
                 {
                     nome: 'Pães',
                     imagem: 'paes.webp',
                     itens: [
-                        { nome: 'Pão de Centeio', descricao: 'Fatia grossa, ideal para torradas.', preco: 10.00, imageUrl: 'paofofo.webp' },
-                        { nome: 'Pão de Castanha-do-Pará', descricao: 'Feito com farinha integral.', preco: 12.00, imageUrl: 'paofresco.webp' },
+                        { nome: 'Pão de Centeio', descricao: 'Fatia grossa, ideal para torradas.', preco: 10.00, imageUrl: 'img/paofofo.webp' },
+                        { nome: 'Pão de Castanha-do-Pará', descricao: 'Feito com farinha integral.', preco: 12.00, imageUrl: 'img/paofresco.webp' },
                     ]
                 },
                 {
                     nome: 'Doces',
                     imagem: 'doces.png',
                     itens: [
-                        { nome: 'Bolo de Fubá', descricao: 'Com goiabada, para acompanhar o café.', preco: 8.00, imageUrl: 'fuba.webp' },
-                        { nome: 'Cookies de Chocolate', descricao: 'Com gotas de chocolate belga.', preco: 5.00, imageUrl: 'cookie.webp' },
-                        { nome: 'Cuca de Banana', descricao: 'Uma delícia do sul.', preco: 11.00, imageUrl: 'cuca.webp' },
+                        { nome: 'Bolo de Fubá', descricao: 'Com goiabada, para acompanhar o café.', preco: 8.00, imageUrl: 'img/fuba.webp' },
+                        { nome: 'Cookies de Chocolate', descricao: 'Com gotas de chocolate belga.', preco: 5.00, imageUrl: 'img/cookie.webp' },
+                        { nome: 'Cuca de Banana', descricao: 'Uma delícia do sul.', preco: 11.00, imageUrl: 'img/cuca.webp' },
                     ]
                 }
             ]
