--- a/modelo8.html
+++ b/modelo8.html
@@ -139,23 +139,23 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Cafeteria Aconchego',
-            logoUrl: 'logoexemplo.png',
+            logoUrl: 'img/logoexemplo.png',
             ofertaDoDia: {
                 nome: 'Cappuccino Gelado',
                 preco: 15.00,
-                fotoUrl: 'capu.avif'
+                fotoUrl: 'img/capu.avif'
             },
             categoria: {
                 nome: 'Bebidas Quentes',
                 // Adicionada a URL da imagem da categoria
-                imagemUrl: 'bebidasgeral.jpg',
+                imagemUrl: 'img/bebidasgeral.jpg',
                 itens: [
                     // A foto de cada item está aqui
-                    { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: 'cafe.jpg' },
-                    { nome: 'Latte', descricao: 'Café com leite vaporizado.', preco: 10.00, fotoUrl: 'cafe2.jpeg' },
-                    { nome: 'Mocha', descricao: 'Café com chocolate e leite.', preco: 12.00, fotoUrl: 'cafe3.jpg' },
-                    { nome: 'Chá Mate', descricao: 'Chá gelado com limão.', preco: 8.00, fotoUrl: 'cha.jpg' },
-                    { nome: 'Chocolate Quente', descricao: 'Feito com cacau 100%.', preco: 11.00, fotoUrl: 'choco.jpeg' },
+                    { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: 'img/cafe.jpg' },
+                    { nome: 'Latte', descricao: 'Café com leite vaporizado.', preco: 10.00, fotoUrl: 'img/cafe2.jpeg' },
+                    { nome: 'Mocha', descricao: 'Café com chocolate e leite.', preco: 12.00, fotoUrl: 'img/cafe3.jpg' },
+                    { nome: 'Chá Mate', descricao: 'Chá gelado com limão.', preco: 8.00, fotoUrl: 'img/cha.jpg' },
+                    { nome: 'Chocolate Quente', descricao: 'Feito com cacau 100%.', preco: 11.00, fotoUrl: 'img/choco.jpeg' },
                 ]
             }
         };
