--- a/modelo10.html
+++ b/modelo10.html
@@ -194,7 +194,7 @@
         };
 
         // URL da imagem de fundo
-        const backgroundImageUrl = 'bolo_chocolate.jpg';
+        const backgroundImageUrl = 'img/bolo_chocolate.jpg';
 
         // Função para renderizar o cardápio
         const renderizarCardapio = () => {
