--- a/modelo13.html
+++ b/modelo13.html
@@ -164,31 +164,31 @@
                     nome: "Frutas",
                     cor: "text-[#d62828]",
                     itens: [
-                        { nome: "Banana", descricao: "Nanica", preco: 5.99, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Morango", descricao: "Bandeja fresca", preco: 8.50, unidade: "unid.", imagem: 'verduras.webp' },
-                        { nome: "Laranja", descricao: "Pera", preco: 3.20, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Maçã", descricao: "Gala", preco: 9.90, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Melancia", descricao: "Doce e suculenta", preco: 2.50, unidade: "kg", imagem: 'verduras.webp' },
+                        { nome: "Banana", descricao: "Nanica", preco: 5.99, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Morango", descricao: "Bandeja fresca", preco: 8.50, unidade: "unid.", imagem: 'img/verduras.webp' },
+                        { nome: "Laranja", descricao: "Pera", preco: 3.20, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Maçã", descricao: "Gala", preco: 9.90, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Melancia", descricao: "Doce e suculenta", preco: 2.50, unidade: "kg", imagem: 'img/verduras.webp' },
                     ]
                 },
                 {
                     nome: "Verduras",
                     cor: "text-[#2e7d32]",
                     itens: [
-                        { nome: "Alface", descricao: "Lisa", preco: 2.99, unidade: "unid.", imagem: 'verduras.webp' },
-                        { nome: "Couve", descricao: "Maço", preco: 3.50, unidade: "unid.", imagem: 'verduras.webp' },
-                        { nome: "Brócolis", descricao: "Fresco", preco: 7.80, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Rúcula", descricao: "Maço", preco: 4.00, unidade: "unid.", imagem: 'verduras.webp' },
+                        { nome: "Alface", descricao: "Lisa", preco: 2.99, unidade: "unid.", imagem: 'img/verduras.webp' },
+                        { nome: "Couve", descricao: "Maço", preco: 3.50, unidade: "unid.", imagem: 'img/verduras.webp' },
+                        { nome: "Brócolis", descricao: "Fresco", preco: 7.80, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Rúcula", descricao: "Maço", preco: 4.00, unidade: "unid.", imagem: 'img/verduras.webp' },
                     ]
                 },
                 {
                     nome: "Legumes",
                     cor: "text-[#ff6f00]",
                     itens: [
-                        { nome: "Tomate", descricao: "Maduro", preco: 6.90, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Batata", descricao: "Baking", preco: 4.50, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Cenoura", descricao: "Fresca", preco: 3.80, unidade: "kg", imagem: 'verduras.webp' },
-                        { nome: "Pimentão", descricao: "Verde", preco: 5.20, unidade: "kg", imagem: 'verduras.webp' },
+                        { nome: "Tomate", descricao: "Maduro", preco: 6.90, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Batata", descricao: "Baking", preco: 4.50, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Cenoura", descricao: "Fresca", preco: 3.80, unidade: "kg", imagem: 'img/verduras.webp' },
+                        { nome: "Pimentão", descricao: "Verde", preco: 5.20, unidade: "kg", imagem: 'img/verduras.webp' },
                     ]
                 }
             ]
