--- a/modelo14.html
+++ b/modelo14.html
@@ -168,30 +168,30 @@
                     nome: "Carnes Bovinas",
                     cor: "text-red-800",
                     itens: [
-                        { nome: "Picanha", preco: 79.90, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Alcatra", preco: 45.50, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Contrafilé", preco: 52.80, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Filé Mignon", preco: 85.00, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Costela Bovina", preco: 38.00, unidade: "kg", imagem: 'carnes.jpg' },
+                        { nome: "Picanha", preco: 79.90, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Alcatra", preco: 45.50, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Contrafilé", preco: 52.80, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Filé Mignon", preco: 85.00, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Costela Bovina", preco: 38.00, unidade: "kg", imagem: 'img/carnes.jpg' },
                     ]
                 },
                 {
                     nome: "Carnes Suínas",
                     cor: "text-red-700",
                     itens: [
-                        { nome: "Costelinha", preco: 29.90, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Pernil", preco: 25.00, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Lombo", preco: 33.50, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Toucinho", preco: 21.00, unidade: "kg", imagem: 'carnes.jpg' }
+                        { nome: "Costelinha", preco: 29.90, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Pernil", preco: 25.00, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Lombo", preco: 33.50, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Toucinho", preco: 21.00, unidade: "kg", imagem: 'img/carnes.jpg' }
                     ]
                 },
                 {
                     nome: "Aves",
                     cor: "text-red-600",
                     itens: [
-                        { nome: "Peito de Frango", preco: 18.90, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Coxa com Sobrecoxa", preco: 15.50, unidade: "kg", imagem: 'carnes.jpg' },
-                        { nome: "Asa de Frango", preco: 22.00, unidade: "kg", imagem: 'carnes.jpg' }
+                        { nome: "Peito de Frango", preco: 18.90, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Coxa com Sobrecoxa", preco: 15.50, unidade: "kg", imagem: 'img/carnes.jpg' },
+                        { nome: "Asa de Frango", preco: 22.00, unidade: "kg", imagem: 'img/carnes.jpg' }
                     ]
                 },
             ]
