--- a/modelo3.html
+++ b/modelo3.html
@@ -251,20 +251,20 @@
             categorias: [
                 {
                     nome: 'Bebidas Quentes',
-                    imagem: 'bebidasgeral.jpg',
+                    imagem: 'img/bebidasgeral.jpg',
                     itens: [
-                        { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, imagem: 'cafe.jpg' },
-                        { nome: 'Cappuccino', descricao: 'Com canela e chocolate.', preco: 12.00, imagem: 'capu.avif' },
-                        { nome: 'Chá de Ervas', descricao: 'Camomila, hortelã ou cidreira.', preco: 8.00, imagem: 'cha.jpg' },
+                        { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, imagem: 'img/cafe.jpg' },
+                        { nome: 'Cappuccino', descricao: 'Com canela e chocolate.', preco: 12.00, imagem: 'img/capu.avif' },
+                        { nome: 'Chá de Ervas', descricao: 'Camomila, hortelã ou cidreira.', preco: 8.00, imagem: 'img/cha.jpg' },
                     ]
                 },
                 {
                     nome: 'Salgados',
-                    imagem: 'salgados.jpg',
+                    imagem: 'img/salgados.jpg',
                     itens: [
-                        { nome: 'Coxinha de Frango', descricao: 'A favorita de todos.', preco: 7.50, imagem: 'coxinha.webp' },
-                        { nome: 'Pão de Queijo Recheado', descricao: 'Com requeijão ou catupiry.', preco: 9.00, imagem: 'paoqueijo.jpeg' },
-                        { nome: 'Empadinha de Palmito', descricao: 'Massa fina e recheio cremoso.', preco: 8.00, imagem: 'empada.jpg' },
+                        { nome: 'Coxinha de Frango', descricao: 'A favorita de todos.', preco: 7.50, imagem: 'img/coxinha.webp' },
+                        { nome: 'Pão de Queijo Recheado', descricao: 'Com requeijão ou catupiry.', preco: 9.00, imagem: 'img/paoqueijo.jpeg' },
+                        { nome: 'Empadinha de Palmito', descricao: 'Massa fina e recheio cremoso.', preco: 8.00, imagem: 'img/empada.jpg' },
                     ]
                 }
             ]
