--- a/modelo4.html
+++ b/modelo4.html
@@ -208,7 +208,7 @@
             categorias: [
                 {
                     nome: 'Pães',
-                    imagem: 'paes.webp',
+                    imagem: 'img/paes.webp',
                     itens: [
                         { nome: 'Pão de Centeio', descricao: 'Fatia grossa, ideal para torradas.', preco: 10.00, imageUrl: 'img/paofofo.webp' },
                         { nome: 'Pão de Castanha-do-Pará', descricao: 'Feito com farinha integral.', preco: 12.00, imageUrl: 'img/paofresco.webp' },
@@ -216,7 +216,7 @@
                 },
                 {
                     nome: 'Doces',
-                    imagem: 'doces.png',
+                    imagem: 'img/doces.png',
                     itens: [
                         { nome: 'Bolo de Fubá', descricao: 'Com goiabada, para acompanhar o café.', preco: 8.00, imageUrl: 'img/fuba.webp' },
                         { nome: 'Cookies de Chocolate', descricao: 'Com gotas de chocolate belga.', preco: 5.00, imageUrl: 'img/cookie.webp' },
