--- a/modelo9.html
+++ b/modelo9.html
@@ -138,7 +138,7 @@
         // Dados da página que serão carregados via JavaScript
         const dadosPagina = {
             nomeEmpresa: 'Cafeteria Aconchego',
-            logoUrl: 'img/img/logoexemplo.png',
+            logoUrl: 'img/logoexemplo.png',
             backgroundUrl: 'img/fundo2.jpg',
             categoria: {
                 nome: 'Bebidas Quentes',
