--- a/modelo2.html
+++ b/modelo2.html
@@ -135,11 +135,11 @@
         // Dados da loja que você pode editar
         const dadosLoja = {
             nomeEmpresa: 'Padaria da Esquina',
-            logoUrl: 'img/img/logoexemplo.png',
+            logoUrl: 'img/logoexemplo.png',
             categorias: [
                 {
                     nome: 'Salgados',
-                    imagem: 'salgados.jpg',
+                    imagem: 'img/salgados.jpg',
                     itens: [
                         { nome: 'Coxinha de Frango', descricao: 'Nossa campeã de vendas!', preco: 7.50, imageUrl: 'img/coxinha.webp' },
                         { nome: 'Quiche de Alho Poró', descricao: 'Feita com massa crocante.', preco: 9.00, imageUrl: 'img/alho.avif' },
@@ -148,7 +148,7 @@
                 },
                 {
                     nome: 'Bebidas',
-                    imagem: 'bebidasgeral.jpg',
+                    imagem: 'img/bebidasgeral.jpg',
                     itens: [
                         { nome: 'Café Coado', descricao: 'O clássico para um bom dia.', preco: 5.00, imageUrl: 'img/cafe.jpg' },
                         { nome: 'Suco de Laranja', descricao: '100% natural, espremido na hora.', preco: 8.50, imageUrl: 'img/suco.webp' },
