--- a/modelo2.html
+++ b/modelo2.html
@@ -150,7 +150,7 @@
                     nome: 'Bebidas',
                     imagem: 'img/bebidasgeral.jpg',
                     itens: [
-                        { nome: 'Café Coado', descricao: 'O clássico para um bom dia.', preco: 5.00, imageUrl: 'img/cafe.jpg' },
+                        { nome: 'Café Coado', descricao: 'O clássico para um bom dia.', preco: 5.00, imageUrl: "img/cafe.jpg" },
                         { nome: 'Suco de Laranja', descricao: '100% natural, espremido na hora.', preco: 8.50, imageUrl: 'img/suco.webp' },
                     ]
                 },
