--- a/modelo3.html
+++ b/modelo3.html
@@ -253,7 +253,7 @@
                     nome: 'Bebidas Quentes',
                     imagem: 'img/bebidasgeral.jpg',
                     itens: [
-                        { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, imagem: "img/cafe.jpg" },
+                        { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, imagem: 'img/cafe2.jpeg' },
                         { nome: 'Cappuccino', descricao: 'Com canela e chocolate.', preco: 12.00, imagem: 'img/capu.avif' },
                         { nome: 'Chá de Ervas', descricao: 'Camomila, hortelã ou cidreira.', preco: 8.00, imagem: 'img/cha.jpg' },
                     ]
