--- a/modelo9.html
+++ b/modelo9.html
@@ -144,7 +144,7 @@
                 nome: 'Bebidas Quentes',
                 imagemUrl: 'img/bebidasgeral.jpg',
                 itens: [
-                    { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: "img/cafe.jpg" },
+                    { nome: 'Café Expresso', descricao: 'O tradicional, forte e encorpado.', preco: 6.00, fotoUrl: 'img/cafe2.jpeg' },
                     { nome: 'Latte', descricao: 'Café com leite vaporizado.', preco: 10.00, fotoUrl: 'img/cafe2.jpeg' },
                     { nome: 'Mocha', descricao: 'Café com chocolate e leite.', preco: 12.00, fotoUrl: 'img/cafe3.jpg' },
                     { nome: 'Chá Mate', descricao: 'Chá gelado com limão.', preco: 8.00, fotoUrl: 'img/cha.jpg' },
